# SMROS

./: .gitignore  BOOT_FLOW.md  Cargo.toml  EL0_SHELL_AND_KERNEL_OBJECTS.md  KERNEL_OBJECTS_DIRECTORY.md  LICENSE  MEMORY_SYSCALLS_IMPLEMENTED.md  Makefile  README.md  SHELL.md  SYSCALL_COMPATIBILITY.md  build.rs  kernel8_raw.img
.cargo/: config.toml
.qwen/: settings.json
benchmarks/dhrystone_smros/: build.sh  dhry.h  dhry_1.c  dhry_2.c  main.c  smros_dhry.c  smros_dhry.h  start.S
benchmarks/fuchsia_microbenchmarks_smros/: build.sh  main.cc  (+8 more)
config/: process_rights.json
docs/: BOOT_FLOW.md  KERNEL_OBJECTS_DIRECTORY.md  MEMORY_SYSCALLS_IMPLEMENTED.md  NETWORKING.md  SYSCALL_COMPATIBILITY.md  TESTING.md  USER_KERNEL_IMP.md  USER_SHELL.md  USER_SHELL_KERNEL_OBJECT.md  USER_TEST.md  VERUS.md  VERUS_COVERAGE.md  user-kernel-imp.md
host_shared/: dhrystone.elf  fuchsia_bench.elf  hello.elf  trace.pftrace  unixbench.elf  vm-linux-demo.xml  vm-linux-demo2.xml
linker/: kernel.ld
scripts/: audit-verus-coverage.sh  build-linux-initrd.sh  build.sh  pull-docker-image.sh  run-host-unit-tests.sh  run-simple.sh  run.sh  setup-qemu-icmp.sh  setup-verus.sh  smoke-qemu.sh  smros-vm-launcher.py  start-smros-vm-launcher.sh  sync-host-shared.py  verify-kernel-lowlevel-verus.sh  verify-kernel-objects-verus.sh  verify-services-verus.sh  verify-syscall-verus.sh  verify-user-level-verus.sh
src/: context_switch.S  drivers.rs  interrupt.rs  main.rs  main_logic.rs  main_logic_shared.rs  memory.rs  scheduler.rs  serial.rs  smp.rs  thread.rs  timer.rs
verification/: verus-toolchain.env
(+128 files in other folders)
