[package]
name = "smros"
version = "0.1.0"
edition = "2021"
authors = ["SMROS Developers"]
build = "build.rs"

[dependencies]
volatile = "0.4"
cortex-a = "8"
tock-registers = "0.8"
bitflags = "1.3"

[build-dependencies]
cc = "1.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
